--- a/teste002/style.css
+++ b/teste002/style.css
@@ -324,6 +324,43 @@ footer a:hover {
 }
 }
 
+/*Configurações portates*/
+
+@media screen and (orientation: portrait){
+    header {
+        background-image: url("imagens/lampada-retrato-form.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: left center;
+        padding: 230px;
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 320px;
+        background-color: lightgreen;
+    }
+    header > h1 {
+        font-size: 2.5em;
+        text-align: center;
+        position: absolute;
+        top: 55%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-weight: bold;
+        background-color: rgba(0, 0, 0, 0.6);
+        color: white;
+    }
+
+    section.imagem08 {
+        padding-top: 150px;
+        padding-bottom: 150px;
+        background-image: url("imagens/represa-800.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        background-color: gray;
+    }
+}
 
 /*Outras configurações*/
 
